; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_cprotect.c_cpx_set_is_composite_key.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_cprotect.c_cpx_set_is_composite_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpx = type { i32 }

@CPX_COMPOSITEKEY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cpx_set_is_composite_key(%struct.cpx* %0, i32 %1) #0 {
  %3 = alloca %struct.cpx*, align 8
  %4 = alloca i32, align 4
  store %struct.cpx* %0, %struct.cpx** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load %struct.cpx*, %struct.cpx** %3, align 8
  %9 = getelementptr inbounds %struct.cpx, %struct.cpx* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @CPX_COMPOSITEKEY, align 4
  %12 = call i32 @SET(i32 %10, i32 %11)
  br label %19

13:                                               ; preds = %2
  %14 = load %struct.cpx*, %struct.cpx** %3, align 8
  %15 = getelementptr inbounds %struct.cpx, %struct.cpx* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @CPX_COMPOSITEKEY, align 4
  %18 = call i32 @CLR(i32 %16, i32 %17)
  br label %19

19:                                               ; preds = %13, %7
  ret void
}

declare dso_local i32 @SET(i32, i32) #1

declare dso_local i32 @CLR(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
